# riscv16

./: .gitignore  CMakeLists.txr  CMakeLists.txt  README.md  Valu  Valu_tb
.github/workflows/: alu_testbench_ci.yml  cmake-multi-platform.yml  risc16-ci.yml
doc/: getting_started.md  isa.md
dv/: CMakeLists.txt  alu_tb.cpp  risc16_top.cpp
mem/: data_mem.hex
sim/: compile.sh  run.sh
src/: alu.sv  control.sv  control_unit.sv  data_memory.sv  instr_memory.sv  pc.sv  regfile.sv  risc16_top.sv
tb/: alu_tb.sv  risc16_tb.sv  test_top.py
